Fix  "Not sure we have all the polyfills implemented right as Greg can't see the tickets on iphone 5"

--- a/lot-ticket/app/css/app.css
+++ b/lot-ticket/app/css/app.css
@@ -85,10 +85,20 @@ html, body, h1, h2, h3, h4 {
 .bet {
 	padding: 5px;
 	padding-left: 15px;
+
+
+	-ms-transform: translateX(-100%);
 	-webkit-transform: translateX(-100%);
+	-moz-transform: translateX(-100%);
+	-o-transform: translateX(-100%);
 	transform: translateX(-100%);
-    -webkit-transition: all 0.6s; 
-    transition: all 0.6s;
+
+
+ 	-ms-transition:  all 0.6s; 
+	-webkit-transition:  all 0.6s; 
+	-moz-transition: all 0.6s; 
+	-o-transition:  all 0.6s; 
+	transition:  all 0.6s; 
 	
 /*
 		animation-name: slide-left;
@@ -108,10 +118,12 @@ html, body, h1, h2, h3, h4 {
 }
 
 .bet.slide {
-	-webkit-transform: translateX(0%);
-	transform: translateX(0%);
+	-ms-transform: translateX(0);
+	-webkit-transform: translateX(0);
+	-moz-transform: translateX(0);
+	-o-transform: translateX(0);
+	transform: translateX(0);
 }
-
 
 .bet-action {
 	padding-left: 0 !important;
